@@ -96,6 +96,8 @@ outputs=" \
          gm2/examples/gravity/Makefile \
          gm2/examples/hello/Makefile \
          gm2/examples/map/Makefile \
+         gm2/examples/swig/exceptions/Makefile \
+         gm2/examples/swig/tiny/Makefile \
          gm2/man/Makefile \
          gm2/p2c/Makefile \
          gm2/p2c/p2c-src/Makefile \
